Bug fix: Fixed the dom for card number

--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
               alt="card-badge"
               class="class_badge"
             />
-            <p>visa</p>
+            <p class="card_issuer">visa</p>
           </div>
+
+          <div class="cardholder_number">
+              <span>0000</span>
+              <span>1111</span>
+              <span>2222</span>
+              <span>3333</span>
+          </div>
+
           <div class="card_details_two">
             <div>
               <p class="card_owner_name">card holder</p>
-              <p>gloria ubah</p>
+              <p id="card_holder_name">gloria ubah</p>
             </div>
 
             <div>
@@ -41,6 +49,7 @@
               id="card_number"
               placeholder=""
               class="form_input_number card_holder_number"
+              maxlength="3"
             />
             <input
               type="number"
@@ -48,6 +57,7 @@
               id="card_number2"
               placeholder=""
               class="form_input_number"
+              maxlength="3"
             />
             <input
               type="number"
@@ -55,6 +65,7 @@
               id="card_number3"
               placeholder=""
               class="form_input_number"
+              maxlength="3"
             />
             <input
               type="number"
@@ -62,6 +73,7 @@
               id="card_number4"
               placeholder=""
               class="form_input_number"
+              maxlength="3"
             />
           </div>
         </div>
