--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
         <div>
-          <button class="submit_btn">submit</button>
+          <button class="submit_btn" type="submit">submit</button>
         </div>
       </form>
       <div class="alert_box">
