--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="payment_card">
           <div class="card_details_one">
             <img
-              src="/assets/20230829_130215.jpg"
+              src="assets/20230829_130215.jpg"
               alt="card-badge"
               class="class_badge"
             />
