--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="payment_card">
           <div class="card_details_one">
             <img
-              src="assets/20230829_130215.jpg"
+              src="assets/images__2_-removebg-preview.png"
               alt="card-badge"
               class="class_badge"
             />
-            <p class="card_issuer">visa</p>
+            <img src="assets/Visa_Inc._logo.svg.png" alt="card issuer logo" class="card_issuer">
           </div>
 
           <div class="cardholder_number">
@@ -43,6 +43,7 @@
         </div>
       </div>
       <form action="" class="payment_form">
+
         <div class="form_section">
           <label for="card_number">card number</label>
           <div class="form_inputs">
@@ -79,6 +80,7 @@
               maxlength="3"
             />
           </div>
+          <div class="message1"></div>
         </div>
 
         <div class="form_section">
@@ -92,6 +94,7 @@
               class="form_input_name"
             />
           </div>
+          <div class="message2"></div>
         </div>
 
         <div class="form_section form_section_three">
@@ -114,6 +117,7 @@
               />
             </div>
           </div>
+          <div class="message3"></div>
         </div>
 
         <div>
